12854
The code
{code}
object test extends Application {
  val a = Array(0, 1, 2).slice(1, 2) filter (_ > 0)
  println(Array.concat(a))
}
{code}
produces the following compiler error
{code}
test.scala:3: error: type mismatch;
 found   : Seq.Projection[Int]
 required: Array[?]
  println(Array.concat(a))
                       ^
one error found
{code}
